# snapcfg

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.fr.md  README.md  README.ru.md  README.tr.md  config.toml
snapcfg-macros/: Cargo.toml
snapcfg-macros/src/: lib.rs
src/: config.rs  error.rs  hot_reload.rs  lib.rs  main.rs  watcher.rs
tests/: derive_hot_reload.rs
