[package]
name = "snapcfg-macros"
version = "0.1.0"
edition = "2026"
description = "Proc-macro crate for snapcfg: #[derive(HotReload)]"

# REQUIRED: proc-macro crates must carry this flag
[lib]
proc-macro = true

[dependencies]
# AST parse (TokenStream → Rust syntax tree)
syn = { version = "2.0", features = ["full"] }

# Code generation (Rust AST → TokenStream)
quote = "1.0"

# proc-macro2: stable TokenStream wrapper working with syn/quote
proc-macro2 = "1.0"